<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">DistanceMe</string>
    <string name="title_activity_maps">DistanceMe</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="nearby_devices">Nearby Devices</string>

    <string name="score">My Score</string>
    <string name="closeby">Who\'s Close</string>
    <string name="activity">My Activity</string>

    <string name="last_score_title">Your Last Score was:</string>
    <string name="curr_score_title">Your Current Score is:</string>
    <string name="fill"></string>

    <string name="who_close">It looks like there\'s no one around you!</string>

    <string name="activity_head">Please wait\n Retrieving current location...</string>

    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>

    <!--  DeviceListActivity -->
    <string name="scanning">Scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
</resources>
